ensure text ellipsis on overflow

--- a/app/components/work_packages/activities_tab/journals/new_component.sass
+++ b/app/components/work_packages/activities_tab/journals/new_component.sass
@@ -1,14 +1,16 @@
+@import "helpers"
+
 .work-packages-activities-tab-journals-new-component
     &--input-trigger-column
-        min-width: 0
-        overflow: hidden
         width: 100%
+        overflow: hidden
         button
             min-width: 0
             background: var(--bgColor-default)
             cursor: text
-            .Button-content
+            span
                 display: block
+                @include text-shortener
     &--ck-editor-column
         width: calc(100% - 40px)
         // specific ck editor adjustments
